# IP-Geolocation-App

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  README_ALTERNANCE.md  client.py  client_ui.py  docker-compose.yml  pyproject.toml  settings.py  test_nicegui.py  webserv.py
tests/: test_settings.py  test_webserv.py
