[project]
name = "tpapplication"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "mabiala",email = "mabiala@et.esiea.fr"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "nicegui (>=3.6.1,<4.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
